@@ -1,3 +1,8 @@
+2003-10-08  Ben Elliston  <bje@wasabisystems.com>
+
+	* i960glue.c: Remove.
+	* packaging/pkg/prototype: Remove i960glue.c.
+
 2003-10-07  Ben Elliston  <bje@wasabisystems.com>
 
 	* contrib/README: Remove.
